<resources>
    <string name="app_name">Sorter Camera</string>
    <string name="status_waiting">Waiting for camera permission.</string>
    <string name="port_label">Stream Port</string>
    <string name="default_port">8080</string>
    <string name="use_front_camera">Use front camera</string>
    <string name="start_stream">Start Stream</string>
    <string name="stop_stream">Stop Stream</string>
    <string name="urls_template">MJPEG: %1$s\nSnapshot: %2$s\nHealth: %3$s</string>
    <string name="adb_forward_template">USB via ADB: adb forward tcp:%1$d tcp:%1$d</string>
    <string name="discovery_ready_template">Announcing on network as %1$s</string>
    <string name="discovery_starting">Network discovery: starting...</string>
    <string name="discovery_stopped">Network discovery: stopped</string>
</resources>
